# civic-slm

./: .envrc.lmstudio  .envrc.lmstudio-gemma  .gitignore  ACCEPTABLE_USE_POLICY.md  AGENTS.md  ARCHITECTURE.md  AUDIT.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_CARD.md  GOVERNANCE.md  MODEL_CARD.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  pyproject.toml  pyrightconfig.json  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  recipe_request.yml
.github/workflows/: ci.yml  release.yml
artifacts/evals/base-gemma-4/: extraction.json  extraction.md
artifacts/evals/base-qwen2.5-7b/: extraction.json  extraction.md  factuality.json  factuality.md  refusal.json  refusal.md
artifacts/evals/base-qwen3.6-27b/: extraction.json  extraction.md  factuality.json  factuality.md  refusal.json  refusal.md
artifacts/evals/civic-slm-v1/: extraction.json  extraction.md  factuality.json  factuality.md  refusal.json  refusal.md
artifacts/evals/civic-slm-v11/: extraction.json  extraction.md  factuality.json  factuality.md  refusal.json  refusal.md  second-city-breakdown.json  second-city-breakdown.md
artifacts/evals/san-clemente-v1/: extraction.json  extraction.md  factuality.json  factuality.md  refusal.json  refusal.md
artifacts/training-logs/: v1-status.md
configs/: cpt.yaml  dpo.yaml  gemma-cpt.yaml  gemma-sft.yaml  jurisdiction-default.cpt.yaml  jurisdiction-default.sft.yaml  multi.cpt.yaml  multi.sft.yaml  sft.yaml
data/eval/: civic_factuality.jsonl  refusal.jsonl  side_by_side.jsonl  structured_extraction.jsonl
data/raw/: manifest.jsonl
docs/: GLOSSARY.md  RECIPES.md  RUNTIMES.md  SOURCES.md  USAGE.md
docs/legal/: permission-request-san-clemente.md
examples/: 01_ask_a_question.py  02_run_factuality_eval.py  03_inspect_a_baseline.py  README.md
scripts/: apply-branch-protection.sh  merge_quantize.py  prepare_sft.py  review_sft.py  sign-release.sh  tag_eval_jurisdictions.py  verify-release.sh
src/civic_slm/: __init__.py  __main__.py  cli.py  config.py  data_card.py  doctor.py  jsonparse.py  logging.py  schema.py
src/civic_slm/eval/: embeddings.py  judge.py  runner.py  scorers.py  seed.py  side_by_side.py
src/civic_slm/eval/prompts/: extraction_seed.md  factuality_seed.md  refusal_seed.md  side_by_side_seed.md
src/civic_slm/ingest/: crawl.py  harness.py  manifest.py  new_recipe.py  pdf.py  process.py  processed.py
src/civic_slm/ingest/recipes/: _browser.py  _template.py  _youtube.py  atlanta.yaml  austin.yaml  boston.yaml  cook-county.yaml  denver.yaml  nyc.yaml  portland-or.yaml  san_clemente.py  santa-monica.yaml  seattle.yaml  yaml_recipe.py
src/civic_slm/ingest/video/: asr.py  caption.py  transcript.py  youtube.py
src/civic_slm/llm/: backend.py
src/civic_slm/serve/: client.py  llamacpp.py  mlx.py  models.py  openai_compat.py  runtimes.py
src/civic_slm/serve/rag/: cli.py  index.py  retrieve.py
src/civic_slm/synth/: cli.py  generate.py  review.py
src/civic_slm/synth/prompts/: extract.md  qa_grounded.md  refusal.md  summarize.md
src/civic_slm/train/: common.py  cpt.py  dataset.py  dpo.py  jurisdiction.py  merge.py  prepare_cpt.py  prepare_sft.py  sft.py  supervisor.py
tests/: test_backend.py  test_caption.py  test_chat_retry.py  test_cli.py  test_config.py  test_data_card.py  test_embeddings.py  test_eval_runner.py  test_ingest.py  test_jsonparse.py  test_judge.py  test_jurisdiction_pipeline.py  test_models_registry.py  test_openai_compat.py  test_pdf_chunker.py  test_pipeline_smoke.py  test_rag.py  test_recipes.py  test_release_gates.py  test_san_clemente_videos.py  test_schema.py  test_scorers.py  test_side_by_side.py  test_signing.py  test_strict_local.py  test_supervisor.py  test_synth.py  test_synth_prompts.py  test_train.py  test_video_ingest.py  test_youtube_id.py
web/: package.json  pnpm-lock.yaml
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/lib/: docs-fs.ts  models.ts
(+21 files in other folders)
