[project]
name = "civic-slm"
dynamic = ["version"]
description = "Domain-specialized fine-tune of Qwen2.5-7B for U.S. local-government documents."
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Duncan", email = "itsmeduncan@gmail.com" }]
license = { text = "MIT" }
license-files = ["LICENSE"]

dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "structlog>=24.1",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
ingest = [
    "browser-use>=0.1",
    "playwright>=1.45",
    "pypdf>=4.3",
    # CVE-2026-41066 / GHSA-vfmq-68hx-4jfw — lxml < 6.1.0 has XXE local-file
    # read by default in iterparse() / ETCompatXMLParser(). Pulled in
    # transitively via browser-use → python-docx; force the patched version.
    "lxml>=6.1.0",
    # Video ingestion (YouTube channels/playlists + caption + audio fetch).
    "yt-dlp>=2025.1",
    # Whisper ASR fallback when no captions exist (Apple Silicon only).
    "mlx-whisper>=0.4; sys_platform == 'darwin' and platform_machine == 'arm64'",
]
synth = [
    "anthropic>=0.40",
]
train = [
    "mlx>=0.18; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "mlx-lm>=0.19; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "datasets>=2.20",
    "wandb>=0.17",
]
eval = [
    "sentence-transformers>=3.0",
]
dev = [
    "ruff>=0.6",
    "pyright>=1.1.380",
    "pytest>=8.3",
    "pytest-cov>=5.0",
]

[project.scripts]
civic-slm = "civic_slm.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/civic_slm"]

[tool.hatch.version]
path = "VERSION"
pattern = "^(?P<version>[^\\s]+)"

# Scoped override of the global 7-day min-release-age, applied ONLY to lxml.
# Reason: GHSA-vfmq-68hx-4jfw / CVE-2026-41066 (CVSS 7.5) was patched in
# lxml 6.1.0 (published 2026-04-18T04:27Z), which lands ~1 hour shy of the
# 7-day floor at the time we needed it. Every other dep keeps the floor.
# Remove this once lxml 6.1.0+ has aged past 7 days organically.
[tool.uv]
exclude-newer-package = { lxml = "2026-04-18T04:30:00Z" }

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pyright>=1.1.380",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
filterwarnings = ["error"]
asyncio_mode = "auto"
